# Stitch_BaoGai

./: CMakeLists.txt
src/: Camera_input.cpp  Camera_input.hpp  Est_exposure.cpp  Est_exposure.hpp  Est_seam.cpp  Est_seam.hpp  KeyPoint.hpp  Motion.h  Stitch_frame.cpp  Stitch_frame.hpp  main.cpp  stereo_calib1.yaml
